[package]
name = "reeefect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "reeefect"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
reqwest = "0.12.2"
serde = { version = "1.0", features = ["derive"] }