[package]
name = "reeefect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "reeefect"
crate-type = ["cdylib"]

[dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
pyo3 = "0.20.0"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.115"
