[package]
name = "reeefect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "reeefect"
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
pyo3 = "0.21.2"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.115"
serde_with = "3.8.1"
uuid = { version = "1.0", features = ["serde", "v4"] }
